tests/non-matching-function-init-type.qw
// COMPILE: %qwip %src
// EXPECT-COMPILE-ERROR

// CHECK-NEXT: error: Expected the definition to be attached to a function type.
// CHECK-NEXT: func: i32 {
// CHECK-NEXT: ^

func: i32 {
}
